...
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <EditText
        android:id="@+id/AirlineNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/airlinename"
        android:autofillHints="@string/airlinename"
        android:inputType="text"
...
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <EditText
        android:id="@+id/FlightNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/FlightNum"
        android:autofillHints="@string/FlightNum"
        android:inputType="text"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AirlineNameField"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/Src"
        android:autofillHints="@string/Src"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FlightNumber"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/DepDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/DepDate"
        android:autofillHints="@string/DepDate"
        android:inputType="text"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Source"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/DepTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/DepTime"
        android:autofillHints="@string/DepTime"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DepDate"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Dest"
        android:autofillHints="@string/Dest"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DepTime"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ArrivalDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/ArrDate"
        android:autofillHints="@string/ArrDate"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Destination"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ArrivalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/ArrTime"
        android:autofillHints="@string/ArrTime"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ArrivalDate"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/AddFlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addnewflight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
...
