<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/help"
        android:title="@string/help_menu"
        app:showAsAction="always" >
        <menu>
            <item
                android:title="@string/README"
                android:id="@+id/readme"/>
        </menu>
    </item>
</menu>
